[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Ticki <Ticki@users.noreply.github.com>"]

[dependencies.termion]
git = "https://github.com/Ticki/termion.git"
features = ["nightly"]

[[bin]]
name = "minesweeper"
path = "src/minesweeper/main.rs"

[[bin]]
name = "ice"
path = "src/ice/main.rs"
