[package]
name = "games-for-redox"
version = "0.1.0"
authors = ["Ticki <Ticki@users.noreply.github.com>", "Marcelo Paez <paezao@users.noreply.github.com>", "Enrico <EGhiorzi@users.noreply.github.com>"]

[dependencies.termion]
git = "https://github.com/Ticki/termion.git"
features = ["nightly"]

[dependencies.extra]
git = "https://github.com/redox-os/libextra.git"

[[bin]]
name = "minesweeper"
path = "src/minesweeper/main.rs"

[[bin]]
name = "ice"
path = "src/ice/main.rs"

[[bin]]
name = "h4xx3r"
path = "src/h4xx3r/main.rs"

[[bin]]
name = "rusthello"
path = "src/rusthello/main.rs"

[[bin]]
name = "snake"
path = "src/snake/main.rs"

[[bin]]
name = "flappy"
path = "src/flappy/main.rs"

[[bin]]
name = "dem"
path = "src/dem/main.rs"
