[package]
name = "games-for-redox"
version = "0.1.0"
authors = ["Ticki <Ticki@users.noreply.github.com>", "Marcelo Paez <paezao@users.noreply.github.com>", "Enrico <EGhiorzi@users.noreply.github.com>"]

[dependencies]
clap = "2.2"
libgo = "0.1.0"
rustyline = "0.2"
termion = "1.0"

[dependencies.extra]
git = "https://github.com/redox-os/libextra.git"

[[bin]]
name = "minesweeper"
path = "src/minesweeper/main.rs"

[[bin]]
name = "ice"
path = "src/ice/main.rs"

[[bin]]
name = "h4xx3r"
path = "src/h4xx3r/main.rs"

[[bin]]
name = "rusthello"
path = "src/rusthello/main.rs"

[[bin]]
name = "snake"
path = "src/snake/main.rs"

[[bin]]
name = "flappy"
path = "src/flappy/main.rs"

[[bin]]
name = "dem"
path = "src/dem/main.rs"

[[bin]]
name = "reblox"
path = "src/reblox/main.rs"

[[bin]]
name = "baduk"
path = "src/baduk/main.rs"
